# auto-trader

./: .env.example  .gitignore  README.md  ROADMAP.md  pyproject.toml
autotrader/: __init__.py  __main__.py  config.py
autotrader/backtest/: __init__.py  evaluate.py  metrics.py  runner.py
autotrader/data/: __init__.py  loader.py
autotrader/execution/: __init__.py  alpaca.py  broker.py  sim.py
autotrader/live/: __init__.py  notify.py  runner.py
autotrader/risk/: __init__.py  limits.py  sizing.py
autotrader/strategy/: __init__.py  base.py  indicators.py  mean_reversion.py  momentum.py  screener.py
quantconnect/: README.md  base_screener.py  bollinger_reversion.py  combined_screener.py  donchian_breakout.py  gap_reversion.py  ibs_mean_reversion.py  methodology.md  momentum_xsection.py  ndaylow_reversal.py  pead.py  rsi2_mean_reversion.py  volume_spike_breakout.py  week52_breakout.py
scripts/: backtest_sp500.py  evaluate_strategies.py  screen_nasdaq.py
tests/: test_backtest.py  test_config.py  test_data_loader.py  test_evaluate.py  test_execution.py  test_live.py  test_ops.py  test_risk.py  test_screener.py  test_strategy.py
